# igraph-dash-docset

./: .gitignore  .pre-commit-config.yaml  Info.plist  igraph_dash_docset.py  pyproject.toml
assets/: Info.plist  docset.json
