[tool.poetry]
name = "igraph-dash-docset"
version = "0.1.0"
description = "Dash docset generator for igraph"
authors = ["Szabolcs Horvat <szhorvat@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
